fix z-index credits

--- a/latent_portfolio/src/css/style.css
+++ b/latent_portfolio/src/css/style.css
@@ -1356,6 +1356,7 @@
     display: flex;
     align-items: center;
     gap: 6px;
+    z-index:10;
 }
 
 #credit-text img {
